[gd_scene load_steps=11 format=3 uid="uid://nueeyp77c7qi"]

[ext_resource type="Script" uid="uid://tjm6rgqcplpp" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="PackedScene" uid="uid://d2jixk5ydtrj2" path="res://bullet.tscn" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://lfcks073b5pw" path="res://images/player1.png" id="3_sweqy"]
[ext_resource type="AudioStream" uid="uid://d1226s5qfworu" path="res://sounds/Reload.mp3" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://c3d2iiq5uld15" path="res://sounds/GunClick.mp3" id="5_sweqy"]
[ext_resource type="AudioStream" uid="uid://ouurt7xo2pwq" path="res://sounds/gunshot1.mp3" id="6_2hs0m"]
[ext_resource type="AudioStream" uid="uid://baql5oy2hje4b" path="res://sounds/dead.mp3" id="7_1jxqw"]
[ext_resource type="Texture2D" uid="uid://chs7bo7jp856m" path="res://images/gun.png" id="8_gun"]
[ext_resource type="Texture2D" uid="uid://dkjrurpju2iy5" path="res://images/shield.png" id="9_shield"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2o6t"]
size = Vector2(9, 18)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_i3pqv")
bullet_scene = ExtResource("2_hqtel")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_sweqy")

[node name="GunSprite" type="Sprite2D" parent="."]
position = Vector2(5, 0)
texture = ExtResource("8_gun")
offset = Vector2(5, 0)
flip_h = true

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.5, 0.8, 1, 0.7)
scale = Vector2(1.2, 1.2)
texture = ExtResource("9_shield")

[node name="LaserSight" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 100, 0)
width = 2.0
default_color = Color(1, 0, 0, 0.5)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_e2o6t")

[node name="ReloadPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hqtel")

[node name="ClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sweqy")

[node name="FirePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2hs0m")

[node name="DeadPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1jxqw")
